2005-06-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/framework-ps.scm (write-preamble): Support for -d
	gs-font-load=1: read fonts via ghostscript. 
	
	* scm/backend-library.scm (postscript->pdf): Support for
	-dgs-font-load=1

2005-06-09  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/global.itely: added \layout docs.

2005-06-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/framework-ps.scm (write-preamble): make font loading
	switchable to GS via --define-default gs-font-load=1

	* lily/lily-parser-scheme.cc: add unistd.h

2005-06-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/editor.scm: add char argument.

	* scripts/lilypond-invoke-editor.scm (dissect-uri): add char. 

	* ttftool/util.c (syserror): use errno for better error reporting.

	* lily/source-file.cc (get_counts): new function. Calc column,
	line and char count in one go.

	* lily/binary-source-file.cc (quote_input): rename to quote_input

	* lily/input.cc (set): new function.

2005-06-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/file-path.cc (find): Bugfix.  Append rather than prepend
	directory part of file name to search directory.

	* lily/lily-parser-scheme.cc (ly:parse-file): Prepend cwd to
	search path and chdir to DIR if --outname=DIR used.

	* lily/main.cc (prepend_env_path): Bugfix: Check directory
	existence before appending original path.

2005-06-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* ttftool/parse.c (readNamingTable): verbosity for "bad TTF
	file" massage.

	* Documentation/user/GNUmakefile (TEXINPUTS): set TEXINPUTS so our
	texinfo.tex is always used.
	
2005-06-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* flower/include/axis.hh: rename from axes.hh

	* lily/include/text-interface.hh (Module): rename from text-item.hh

	* VERSION (PATCH_LEVEL): release 2.5.29

	* ttftool/parse.c (readNamingTable): handle Apple/8bit encoding too.

	* scm/framework-ps.scm (font-file-as-ps-string): new function.