@@ -42,6 +42,7 @@ class Chord_tremolo_iterator;
 class Cluster_engraver;
 class Column_x_positions;
 class Context;
+class Context_def;
 class Context_specced_music;
 class Engraver;
 class Engraver;
