@@ -74,10 +74,17 @@ Note_heads_engraver::process_music ()
 	}
 
       Pitch *pit = unsmob_pitch (ev->get_property ("pitch"));
+
+#if 0
+      /*
+	TODO: should have a mechanism to switch off these warnings.
+       */
       if (!pit)
 	{
 	  ev->origin ()->warning (_ ("NoteEvent without pitch"));
 	}
+#endif
+      
       int pos = pit ? pit->steps () : 0;
       SCM c0 = get_property ("middleCPosition");
       if (scm_is_number (c0))
